[project]
name = "omorfi"
version = "0.9.11"
dependencies = [
    "hfst>=3.12.2.4b0",
]
license = "GPL-3.0-only"
authors = [{ name = "Flammie A Pirinen", email = "flammie@iki.fi" }]
description = "Python bindings to omorfi"
readme = "README.md"
keywords = ["finnish", "nlp", "morphology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
homepage = "https://flammie.github.io/omorfi/"
repository = "https://github.com/flammie/omorfi/"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
