[metadata]
name = omorfi
version = 0.9.12
description = Open morphology of Finnish python bindings
author = Flammie A Pirinen
author_email = flammie@iki.fi
long_description = file: README.md
long_description_content_type = text/markdown
url: https://github.com/flammie/omorfi/
project_urls =
    Bug Tracker = https://github.com/flammie/omorfi/issues/

keywords = finnish nlp morphology
license = GNU GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = omorfi
scripts =
    omorfi-download.py
    omorfi-conllu.py
    omorfi-convert.py
    omorfi-disamparsulate.py
    omorfi-factorise.py
    omorfi-freq-evals.py
    omorfi-ftb3.py
    omorfi-segment.py
    omorfi-unimorph.py
    omorfi-vislcg.py
    omorfi-wikitable.py
install_requires =
    pyhfst
